--- a/treinamento-razor-lanhouse-resolvido/codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor.csproj
+++ b/treinamento-razor-lanhouse-resolvido/codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor.csproj
@@ -11,11 +11,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
